# napari-trackpy

./: README.md  setup.cfg  tox.ini
src/napari_trackpy/: __init__.py  _sample_data.py  _widget copy.py  _widget.py  helpers_axes.py  mask_measurements.py  napari.yaml  support_libraries.py
src/napari_trackpy/_tests/: test_functions.ipynb  test_functions.py  test_mask_measurements.py  test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
