[metadata]
name = napari-trackpy
version = attr: napari_trackpy.__version__
description = Plugin to detect spots and create tracks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joaomamede/napari-trackpy
author = Joao Mamede
author_email = joao_mamede@rush.edu
license = GPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/joaomamede/napari-trackpy/issues
    Documentation = https://github.com/joaomamede/napari-trackpy#README.md
    Source Code = https://github.com/joaomamede/napari-trackpy
    User Support = https://github.com/joaomamede/napari-trackpy/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-trackpy = napari_trackpy:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
